# scaffold

./: .gitignore  README.md  pyproject.toml
src/scaffold/: command_line.py
src/scaffold/data/: flake8.txt  gitignore.txt  pyproject.txt  setup_cfg.txt
