[build-system]
requires = [
    "setuptools>=67",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[project]
name = "scaffold"
version = "1.2.0"
authors = [
    {name = "Ke Xue", email = "xueke.kent@gmail.com"},
]
description = "Scaffold a project with src layout."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

[project.scripts]
scaffold = "scaffold.command_line:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scaffold = ["py.typed", "data/*"]
